--- a/myapp/templates/myapp/about.html
+++ b/myapp/templates/myapp/about.html
@@ -3,10 +3,20 @@
 <head>
       <meta charset="UTF-8">
       <meta name="viewport" content="width=device-width, initial-scale=1.0">
-      <title>Document</title>
+      <title>About</title>
 </head>
 <body>
-      <h1>About Page</h1>
+      <nav>
+            <ul>
+                  <li><a href="{% url 'home'%}">Home</a></li>
+                  <li><a href="{% url 'about'%}">About</a></li>
+                  <li><a href="{% url 'contact'%}">Contact</a></li>
+            </ul>
+      </nav>
       <hr/>
+
+      <h1>About Page</h1>
+
+      
 </body>
 </html>
